Project

General

Profile

Actions

Bug #16682

closed

ceph jewel failed create s3 tpye subuser from admin rest api

Added by joke lee almost 8 years ago. Updated almost 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

hi
in jewel 10.2.2 ,i failed to create s3-type subuser with admin rest api,
the request and response as follows:

PUT /admin/user?subuser&format=json&uid=admin&subuser=admin:dadadadadsssssssss&key-type=s3 HTTP/1.1
Host: yuliyangdebugwebjewel.tunnel.qydev.com
User-Agent: python-requests/2.10.0
Connection: close
Content-Length: 0
Accept: */*
Accept-Encoding: gzip, deflate
Authorization: AWS admin:sFWr5esQHk94rCCooQJEf8ioVCM=
Connection: close
Date: Thu, 14 Jul 2016 04:23:24 GMT

and the response

HTTP/1.1 403 Forbidden
Connection: close
Content-Length: 125
Accept-Ranges: bytes
Content-Type: application/json
Date: Thu, 14 Jul 2016 04:23:37 GMT
X-Amz-Request-Id: tx000000000000000000021-00578713c9-407ab-default

{"Code":"InvalidAccessKeyId","RequestId":"tx000000000000000000021-00578713c9-407ab-default","HostId":"407ab-default-default"}


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #19786: jewel: ceph jewel failed create s3 tpye subuser from admin rest apiResolvedNathan CutlerActions
Actions #1

Updated by Orit Wasserman almost 8 years ago

Hi,
can you provide rgw logs with debug_rgw=20 and debug_ms=5?

Actions #2

Updated by joke lee almost 8 years ago

Orit Wasserman wrote:

Hi,
can you provide rgw logs with debug_rgw=20 and debug_ms=5?

here is the log

7 ==== 128+0+0 (738284908 0 0) 0x7f1db8c51800 con 0x7f1d80024590
2016-07-15 14:54:59.417792 7f1db743f700 1 -- 192.168.10.10:0/2444033935 <== osd.4 192.168.10.12:6800/2352 212 ==== osd_op_reply(793 notify.0 [watch ping cookie 139765625565584 gen 1] v0'0 uv1 ondisk = 0) v7 ==== 128+0+0 (3248623835 0 0) 0x7f1db8c51800 con 0x7f1d80015d00
2016-07-15 14:54:59.420197 7f1d983ce700 1 -- 192.168.10.10:0/2444033935 <== osd.5 192.168.10.12:6804/2476 51 ==== osd_op_reply(797 notify.5 [watch ping cookie 139765625586960 gen 1] v0'0 uv1 ondisk = 0) v7 ==== 128+0+0 (3678609357 0 0) 0x7f1d704606d0 con 0x7f1d8001e760
2016-07-15 14:54:59.425226 7f1d917fa700 1 -- 192.168.10.10:0/2444033935 <== osd.1 192.168.10.10:6804/2723 33 ==== osd_op_reply(791 notify.7 [watch ping cookie 139765625595360 gen 1] v0'0 uv1 ondisk = 0) v7 ==== 128+0+0 (246347383 0 0) 0x7f1db8c51800 con 0x7f1d8001b320
2016-07-15 14:54:59.425590 7f1d916f9700 1 -- 192.168.10.10:0/2444033935 <== osd.0 192.168.10.10:6800/2428 198 ==== osd_op_reply(790 notify.1 [watch ping cookie 139765625580128 gen 1] v0'0 uv1 ondisk = 0) v7 ==== 128+0+0 (552491609 0 0) 0x7f1d7046b240 con 0x7f1d80011ad0
2016-07-15 14:54:59.425710 7f1db743f700 1 -- 192.168.10.10:0/2444033935 <== osd.4 192.168.10.12:6800/2352 213 ==== osd_op_reply(794 notify.2 [watch ping cookie 139765625593280 gen 1] v0'0 uv1 ondisk = 0) v7 ==== 128+0+0 (953002988 0 0) 0x7f1db8c51800 con 0x7f1d80015d00
2016-07-15 14:54:59.425759 7f1db743f700 1 -- 192.168.10.10:0/2444033935 <== osd.4 192.168.10.12:6800/2352 214 ==== osd_op_reply(796 notify.4 [watch ping cookie 139765625584224 gen 1] v0'0 uv3 ondisk = 0) v7 ==== 128+0+0 (3811823726 0 0) 0x7f1db8c51800 con 0x7f1d80015d00
2016-07-15 14:54:59.425793 7f1db743f700 1 -- 192.168.10.10:0/2444033935 <== osd.4 192.168.10.12:6800/2352 215 ==== osd_op_reply(795 notify.3 [watch ping cookie 139765625581488 gen 1] v0'0 uv1 ondisk = 0) v7 ==== 128+0+0 (234278223 0 0) 0x7f1db8c51800 con 0x7f1d80015d00
2016-07-15 14:55:00.498711 7f1d10f41700 20 RGWEnv::set(): HTTP_HOST: yuliyangdebugwebjewel.tunnel.qydev.com
2016-07-15 14:55:00.498730 7f1d10f41700 20 RGWEnv::set(): HTTP_CONNECTION: close
2016-07-15 14:55:00.498733 7f1d10f41700 20 RGWEnv::set(): HTTP_ACCEPT_ENCODING: gzip, deflate
2016-07-15 14:55:00.498735 7f1d10f41700 20 RGWEnv::set(): HTTP_ACCEPT: /*
2016-07-15 14:55:00.498737 7f1d10f41700 20 RGWEnv::set(): HTTP_USER_AGENT: python-requests/2.10.0
2016-07-15 14:55:00.498739 7f1d10f41700 20 RGWEnv::set(): CONTENT_LENGTH: 0
2016-07-15 14:55:00.498741 7f1d10f41700 20 RGWEnv::set(): HTTP_DATE: Fri, 15 Jul 2016 06:54:54 GMT
2016-07-15 14:55:00.498743 7f1d10f41700 20 RGWEnv::set(): HTTP_AUTHORIZATION: AWS admin:BcYz7hHkKJVNDKg7OidxvXwYNBs=
2016-07-15 14:55:00.498745 7f1d10f41700 20 RGWEnv::set(): REQUEST_METHOD: PUT
2016-07-15 14:55:00.498752 7f1d10f41700 20 RGWEnv::set(): REQUEST_URI: /admin/user
2016-07-15 14:55:00.498754 7f1d10f41700 20 RGWEnv::set(): QUERY_STRING: subuser&format=json&uid=admin&subuser=admin:yuliyangs3subuser003&key-type=s3&generate-secret=True
2016-07-15 14:55:00.498757 7f1d10f41700 20 RGWEnv::set(): REMOTE_USER:
2016-07-15 14:55:00.498759 7f1d10f41700 20 RGWEnv::set(): SCRIPT_URI: /admin/user
2016-07-15 14:55:00.498762 7f1d10f41700 20 RGWEnv::set(): SERVER_PORT: 7480
2016-07-15 14:55:00.498763 7f1d10f41700 20 CONTENT_LENGTH=0
2016-07-15 14:55:00.498767 7f1d10f41700 20 HTTP_ACCEPT=
/*
2016-07-15 14:55:00.498768 7f1d10f41700 20 HTTP_ACCEPT_ENCODING=gzip, deflate
2016-07-15 14:55:00.498769 7f1d10f41700 20 HTTP_AUTHORIZATION=AWS admin:BcYz7hHkKJVNDKg7OidxvXwYNBs=
2016-07-15 14:55:00.498770 7f1d10f41700 20 HTTP_CONNECTION=close
2016-07-15 14:55:00.498770 7f1d10f41700 20 HTTP_DATE=Fri, 15 Jul 2016 06:54:54 GMT
2016-07-15 14:55:00.498771 7f1d10f41700 20 HTTP_HOST=yuliyangdebugwebjewel.tunnel.qydev.com
2016-07-15 14:55:00.498772 7f1d10f41700 20 HTTP_USER_AGENT=python-requests/2.10.0
2016-07-15 14:55:00.498776 7f1d10f41700 20 QUERY_STRING=subuser&format=json&uid=admin&subuser=admin:yuliyangs3subuser003&key-type=s3&generate-secret=True
2016-07-15 14:55:00.498777 7f1d10f41700 20 REMOTE_USER=
2016-07-15 14:55:00.498778 7f1d10f41700 20 REQUEST_METHOD=PUT
2016-07-15 14:55:00.498779 7f1d10f41700 20 REQUEST_URI=/admin/user
2016-07-15 14:55:00.498780 7f1d10f41700 20 SCRIPT_URI=/admin/user
2016-07-15 14:55:00.498781 7f1d10f41700 20 SERVER_PORT=7480
2016-07-15 14:55:00.498787 7f1d10f41700 1 ====== starting new request req=0x7f1d10f3b710 =====
2016-07-15 14:55:00.498818 7f1d10f41700 2 req 1:0.000031::PUT /admin/user::initializing for trans_id = tx000000000000000000001-00578888c4-4f240-default
2016-07-15 14:55:00.498825 7f1d10f41700 10 host=yuliyangdebugwebjewel.tunnel.qydev.com
2016-07-15 14:55:00.498834 7f1d10f41700 20 subdomain= domain= in_hosted_domain=0 in_hosted_domain_s3website=0
2016-07-15 14:55:00.498905 7f1d10f41700 10 handler=15RGWHandler_User
2016-07-15 14:55:00.498908 7f1d10f41700 2 req 1:0.000121::PUT /admin/user::getting op 1
2016-07-15 14:55:00.498916 7f1d10f41700 10 op=20RGWOp_Subuser_Create
2016-07-15 14:55:00.498922 7f1d10f41700 2 req 1:0.000135::PUT /admin/user:create_subuser:authorizing
2016-07-15 14:55:00.498966 7f1d10f41700 20 get_system_obj_state: rctx=0x7f1d10f3a250 obj=default.rgw.users.keys:admin state=0x7f1d88009a08 s->prefetch_data=0
2016-07-15 14:55:00.498980 7f1d10f41700 10 cache get: name=default.rgw.users.keys+admin : miss
2016-07-15 14:55:00.499047 7f1d10f41700 1 -- 192.168.10.10:0/2444033935 --> 192.168.10.11:6800/2437 -- osd_op(client.324160.0:798 8.8cee537f admin [getxattrs,stat] snapc 0=[] ack+read+known_if_redirected e222) v7 -- ?+0 0x7f1d8800ab60 con 0x7f1d80024590
2016-07-15 14:55:00.502362 7f1d982cd700 1 -- 192.168.10.10:0/2444033935 <== osd.2 192.168.10.11:6800/2437 189 ==== osd_op_reply(798 admin [getxattrs,stat] v0'0 uv1 ondisk = 0) v7 ==== 167+0+20 (1223384047 0 261950203) 0x7f1db8c51800 con 0x7f1d80024590
2016-07-15 14:55:00.502861 7f1d10f41700 10 cache put: name=default.rgw.users.keys+admin info.flags=6
2016-07-15 14:55:00.502901 7f1d10f41700 10 adding default.rgw.users.keys+admin to cache LRU end
2016-07-15 14:55:00.502912 7f1d10f41700 20 get_system_obj_state: s->obj_tag was set empty
2016-07-15 14:55:00.502923 7f1d10f41700 10 cache get: name=default.rgw.users.keys+admin : type miss (requested=1, cached=6)
2016-07-15 14:55:00.502929 7f1d10f41700 20 get_system_obj_state: rctx=0x7f1d10f3a250 obj=default.rgw.users.keys:admin state=0x7f1d88009a08 s->prefetch_data=0
2016-07-15 14:55:00.502933 7f1d10f41700 20 rados->read ofs=0 len=524288
2016-07-15 14:55:00.502979 7f1d10f41700 1 -- 192.168.10.10:0/2444033935 --> 192.168.10.11:6800/2437 -- osd_op(client.324160.0:799 8.8cee537f admin [read 0~524288] snapc 0=[] ack+read+known_if_redirected e222) v7 -- ?+0 0x7f1d8800b700 con 0x7f1d80024590
2016-07-15 14:55:00.506627 7f1d982cd700 1 -- 192.168.10.10:0/2444033935 <== osd.2 192.168.10.11:6800/2437 190 ==== osd_op_reply(799 admin [read 0~9] v0'0 uv1 ondisk = 0) v7 ==== 125+0+9 (2836048906 0 3754164049) 0x7f1db8c51800 con 0x7f1d80024590
2016-07-15 14:55:00.507138 7f1d10f41700 20 rados->read r=0 bl.length=9
2016-07-15 14:55:00.507182 7f1d10f41700 10 cache put: name=default.rgw.users.keys+admin info.flags=1
2016-07-15 14:55:00.507191 7f1d10f41700 10 moving default.rgw.users.keys+admin to cache LRU end
2016-07-15 14:55:00.507422 7f1d10f41700 20 get_system_obj_state: rctx=0x7f1d10f39f10 obj=default.rgw.users.uid:admin state=0x7f1d8800ccd8 s->prefetch_data=0
2016-07-15 14:55:00.507448 7f1d10f41700 10 cache get: name=default.rgw.users.uid+admin : miss
2016-07-15 14:55:00.507964 7f1d10f41700 1 -- 192.168.10.10:0/2444033935 --> 192.168.10.10:6800/2428 -- osd_op(client.324160.0:800 6.8cee537f admin [call version.read,getxattrs,stat] snapc 0=[] ack+read+known_if_redirected e222) v7 -- ?+0 0x7f1d8800e980 con 0x7f1d80011ad0
2016-07-15 14:55:00.510745 7f1d916f9700 1 -- 192.168.10.10:0/2444033935 <== osd.0 192.168.10.10:6800/2428 199 ==== osd_op_reply(800 admin [call,getxattrs,stat] v0'0 uv47 ondisk = 0) v7 ==== 209+0+139 (3540784314 0 2115369104) 0x7f1d7044a350 con 0x7f1d80011ad0
2016-07-15 14:55:00.512893 7f1d10f41700 10 cache put: name=default.rgw.users.uid+admin info.flags=22
2016-07-15 14:55:00.512923 7f1d10f41700 10 adding default.rgw.users.uid+admin to cache LRU end
2016-07-15 14:55:00.512931 7f1d10f41700 20 get_system_obj_state: s->obj_tag was set empty
2016-07-15 14:55:00.512989 7f1d10f41700 10 cache get: name=default.rgw.users.uid+admin : type miss (requested=17, cached=22)
2016-07-15 14:55:00.512998 7f1d10f41700 20 get_system_obj_state: rctx=0x7f1d10f39f10 obj=default.rgw.users.uid:admin state=0x7f1d8800ccd8 s->prefetch_data=0
2016-07-15 14:55:00.513041 7f1d10f41700 20 rados->read ofs=0 len=524288
2016-07-15 14:55:00.513089 7f1d10f41700 1 -- 192.168.10.10:0/2444033935 --> 192.168.10.10:6800/2428 -- osd_op(client.324160.0:801 6.8cee537f admin [call version.check_conds,call version.read,read 0~524288] snapc 0=[] ack+read+known_if_redirected e222) v7 -- ?+0 0x7f1d88011590 con 0x7f1d80011ad0
2016-07-15 14:55:00.514393 7f1d916f9700 1 -- 192.168.10.10:0/2444033935 <== osd.0 192.168.10.10:6800/2428 200 ==== osd_op_reply(801 admin [call,call,read 0~4517] v0'0 uv47 ondisk = 0) v7 ==== 209+0+4565 (3260276867 0 35622944) 0x7f1d7044a350 con 0x7f1d80011ad0
2016-07-15 14:55:00.515225 7f1d10f41700 20 rados->read r=0 bl.length=4517
2016-07-15 14:55:00.515301 7f1d10f41700 10 cache put: name=default.rgw.users.uid+admin info.flags=17
2016-07-15 14:55:00.515312 7f1d10f41700 10 moving default.rgw.users.uid+admin to cache LRU end
2016-07-15 14:55:00.515436 7f1d10f41700 10 chain_cache_entry: cache_locator=default.rgw.users.uid+admin
2016-07-15 14:55:00.516848 7f1d10f41700 10 get_canon_resource(): dest=/admin/user
2016-07-15 14:55:00.516872 7f1d10f41700 10 auth_hdr:
PUT

Fri, 15 Jul 2016 06:54:54 GMT
/admin/user
2016-07-15 14:55:00.516943 7f1d10f41700 15 calculated digest=BcYz7hHkKJVNDKg7OidxvXwYNBs=
2016-07-15 14:55:00.516946 7f1d10f41700 15 auth_sign=BcYz7hHkKJVNDKg7OidxvXwYNBs=
2016-07-15 14:55:00.516947 7f1d10f41700 15 compare=0
2016-07-15 14:55:00.516955 7f1d10f41700 2 req 1:0.018168::PUT /admin/user:create_subuser:normalizing buckets and tenants
2016-07-15 14:55:00.516968 7f1d10f41700 2 req 1:0.018174::PUT /admin/user:create_subuser:init permissions
2016-07-15 14:55:00.516983 7f1d10f41700 2 req 1:0.018197::PUT /admin/user:create_subuser:recalculating target
2016-07-15 14:55:00.516986 7f1d10f41700 2 req 1:0.018200::PUT /admin/user:create_subuser:reading permissions
2016-07-15 14:55:00.516988 7f1d10f41700 2 req 1:0.018201::PUT /admin/user:create_subuser:init op
2016-07-15 14:55:00.516993 7f1d10f41700 2 req 1:0.018207::PUT /admin/user:create_subuser:verifying op mask
2016-07-15 14:55:00.516998 7f1d10f41700 20 required_mask= 0 user.op_mask=7
2016-07-15 14:55:00.516999 7f1d10f41700 2 req 1:0.018213::PUT /admin/user:create_subuser:verifying op permissions
2016-07-15 14:55:00.517004 7f1d10f41700 2 req 1:0.018218::PUT /admin/user:create_subuser:verifying op params
2016-07-15 14:55:00.517006 7f1d10f41700 2 req 1:0.018220::PUT /admin/user:create_subuser:pre-executing
2016-07-15 14:55:00.517008 7f1d10f41700 2 req 1:0.018222::PUT /admin/user:create_subuser:executing
2016-07-15 14:55:00.517081 7f1d10f41700 20 get_system_obj_state: rctx=0x7f1d10f3a010 obj=default.rgw.users.uid:admin state=0x7f1d88015a18 s->prefetch_data=0
2016-07-15 14:55:00.517094 7f1d10f41700 10 cache get: name=default.rgw.users.uid+admin : type miss (requested=22, cached=19)
2016-07-15 14:55:00.517179 7f1d10f41700 1 -- 192.168.10.10:0/2444033935 --> 192.168.10.10:6800/2428 -- osd_op(client.324160.0:802 6.8cee537f admin [call version.read,getxattrs,stat] snapc 0=[] ack+read+known_if_redirected e222) v7 -- ?+0 0x7f1d88017c50 con 0x7f1d80011ad0
2016-07-15 14:55:00.518863 7f1d916f9700 1 -- 192.168.10.10:0/2444033935 <== osd.0 192.168.10.10:6800/2428 201 ==== osd_op_reply(802 admin [call,getxattrs,stat] v0'0 uv47 ondisk = 0) v7 ==== 209+0+139 (3540784314 0 2115369104) 0x7f1d7044a350 con 0x7f1d80011ad0
2016-07-15 14:55:00.519459 7f1d10f41700 10 cache put: name=default.rgw.users.uid+admin info.flags=22
2016-07-15 14:55:00.519708 7f1d10f41700 10 moving default.rgw.users.uid+admin to cache LRU end
2016-07-15 14:55:00.519728 7f1d10f41700 20 get_system_obj_state: s->obj_tag was set empty
2016-07-15 14:55:00.519742 7f1d10f41700 10 cache get: name=default.rgw.users.uid+admin : hit (requested=17, cached=23)
2016-07-15 14:55:00.519980 7f1d10f41700 2 req 1:0.021191::PUT /admin/user:create_subuser:completing
2016-07-15 14:55:00.520271 7f1d10f41700 2 req 1:0.021484::PUT /admin/user:create_subuser:op status=0
2016-07-15 14:55:00.520280 7f1d10f41700 2 req 1:0.021493::PUT /admin/user:create_subuser:http status=403
2016-07-15 14:55:00.520285 7f1d10f41700 1 ====== req done req=0x7f1d10f3b710 op status=0 http_status=403 ======
2016-07-15 14:55:00.520325 7f1d10f41700 20 process_request() returned 2028
2016-07-15 14:55:00.520696 7f1d10f41700 1 civetweb: 0x7f1d88002190: 192.168.10.10 - - [15/Jul/2016:14:55:00 +0800] "PUT /admin/user HTTP/1.1" 403 0 - python-requests/2.10.0
2016-07-15 14:55:02.397445 7f1d984cf700 2 -
192.168.10.10:0/2444033935 >> 192.168.10.12:6789/0 pipe(0x7f1d80026920 sd=13 :37156 s=2 pgs=28 cs=1 l=1 c=0x7f1d80027be0).reader got KEEPALIVE_ACK
2016-07-15 14:55:04.414733 7f1d9a5d4700 1 -- 192.168.10.10:0/2444033935 --> 192.168.10.10:6800/2428 -- osd_op(client.324160.0:803 2.16dafda0 notify.1 [watch ping cookie 139765625580128 gen 1] snapc 0=[] ondisk+write+known_if_redirected e222) v7 -- ?+0 0x7f1d704606d0 con 0x7f1d80011ad0
2016-07-15 14:55:00.518863 7f1d916f9700 1 -- 192.168.10.10:0/2444033935 <== osd.0 192.168.10.10:6800/2428 201 ==== osd_op_reply(802 admin [call,getxattrs,stat] v0'0 uv47 ondisk = 0) v7 ==== 209+0+139 (3540784314 0 2115369104) 0x7f1d7044a350 con 0x7f1d80011ad0
2016-07-15 14:55:00.519459 7f1d10f41700 10 cache put: name=default.rgw.users.uid+admin info.flags=22
2016-07-15 14:55:00.519708 7f1d10f41700 10 moving default.rgw.users.uid+admin to cache LRU end
2016-07-15 14:55:00.519728 7f1d10f41700 20 get_system_obj_state: s->obj_tag was set empty
2016-07-15 14:55:00.519742 7f1d10f41700 10 cache get: name=default.rgw.users.uid+admin : hit (requested=17, cached=23)
2016-07-15 14:55:00.519980 7f1d10f41700 2 req 1:0.021191::PUT /admin/user:create_subuser:completing
2016-07-15 14:55:00.520271 7f1d10f41700 2 req 1:0.021484::PUT /admin/user:create_subuser:op status=0
2016-07-15 14:55:00.520280 7f1d10f41700 2 req 1:0.021493::PUT /admin/user:create_subuser:http status=403
2016-07-15 14:55:00.520285 7f1d10f41700 1 ====== req done req=0x7f1d10f3b710 op status=0 http_status=403 ======
2016-07-15 14:55:00.520325 7f1d10f41700 20 process_request() returned 2028
2016-07-15 14:55:00.520696 7f1d10f41700 1 civetweb: 0x7f1d88002190: 192.168.10.10 - - [15/Jul/2016:14:55:00 +0800] "PUT /admin/user HTTP/1.1" 403 0 - python-requests/2.10.0
2016-07-15 14:55:02.397445 7f1d984cf700 2 -
192.168.10.10:0/2444033935 >> 192.168.10.12:6789/0 pipe(0x7f1d80026920 sd=13 :37156 s=2 pgs=28 cs=1 l=1 c=0x7f1d80027be0).reader got KEEPALIVE_ACK
2016-07-15 14:55:04.414733 7f1d9a5d4700 1 -- 192.168.10.10:0/2444033935 --> 192.168.10.10:6800/2428 -- osd_op(client.324160.0:803 2.16dafda0 notify.1 [watch ping cookie 139765625580128 gen 1] snapc 0=[] ondisk+write+known_if_redirected e222) v7 -- ?+0 0x7f1d704606d0 con 0x7f1d80011ad0
2016-07-15 14:55:04.414788 7f1d9a5d4700 1 -- 192.168.10.10:0/2444033935 --> 192.168.10.10:6804/2723 -- osd_op(client.324160.0:804 2.84ada7c9 notify.7 [watch ping cookie 139765625595360 gen 1] snapc 0=[] ondisk+write+known_if_redirected e222) v7 -- ?+0 0x7f1d7045ea70 con 0x7f1d8001b320
2016-07-15 14:55:04.414808 7f1d9a5d4700 1 -- 192.168.10.10:0/2444033935 --> 192.168.10.11:6800/2437 -- osd_op(client.324160.0:805 2.97c520d4 notify.6 [watch ping cookie 139765625589632 gen 1] snapc 0=[] ondisk+write+known_if_redirected e222) v7 -- ?+0 0x7f1d70465d70 con 0x7f1d80024590
2016-07-15 14:55:04.414827 7f1d9a5d4700 1 -- 192.168.10.10:0/2444033935 --> 192.168.10.12:6800/2352 -- osd_op(client.324160.0:806 2.4322fa9f notify.0 [watch ping cookie 139765625565584 gen 1] snapc 0=[] ondisk+write+known_if_redirected e222) v7 -- ?+0 0x7f1d7046d3d0 con 0x7f1d80015d00
2016-07-15 14:55:04.414843 7f1d9a5d4700 1 -- 192.168.10.10:0/2444033935 --> 192.168.10.12:6800/2352 -- osd_op(client.324160.0:807 2.88aa5c95 notify.2 [watch ping cookie 139765625593280 gen 1] snapc 0=[] ondisk+write+known_if_redirected e222) v7 -- ?+0 0x7f1d7046b950 con 0x7f1d80015d00
2016-07-15 14:55:04.414855 7f1d9a5d4700 1 -- 192.168.10.10:0/2444033935 --> 192.168.10.12:6800/2352 -- osd_op(client.324160.0:808 2.f8c99aee notify.3 [watch ping cookie 139765625581488 gen 1] snapc 0=[] ondisk+write+known_if_redirected e222) v7 -- ?+0 0x7f1d70470620 con 0x7f1d80015d00
2016-07-15 14:55:04.414868 7f1d9a5d4700 1 -- 192.168.10.10:0/2444033935 --> 192.168.10.12:6800/2352 -- osd_op(client.324160.0:809 2.a204812d notify.4 [watch ping cookie 139765625584224 gen 1] snapc 0=[] ondisk+write+known_if_redirected e222) v7 -- ?+0 0x7f1d70470cc0 con 0x7f1d80015d00
2016-07-15 14:55:04.414880 7f1d9a5d4700 1 -- 192.168.10.10:0/2444033935 --> 192.168.10.12:6804/2476 -- osd_op(client.324160.0:810 2.31099063 notify.5 [watch ping cookie 139765625586960 gen 1] snapc 0=[] ondisk+write+known_if_redirected e222) v7 -- ?+0 0x7f1d70471360 con 0x7f1d8001e760
2016-07-15 14:55:04.414896 7f1d9a5d4700 1 -- 192.168.10.10:0/2444033935 --> 192.168.10.12:6804/2476 -- ping magic: 0 v1 -- ?+0 0x7f1d704718b0 con 0x7f1d8001e760
2016-07-15 14:55:04.414902 7f1d9a5d4700 1 -- 192.168.10.10:0/2444033935 --> 192.168.10.10:6804/2723 -- ping magic: 0 v1 -- ?+0 0x7f1d70471c10 con 0x7f1d8001b320
2016-07-15 14:55:04.414907 7f1d9a5d4700 1 -- 192.168.10.10:0/2444033935 --> 192.168.10.12:6800/2352 -- ping magic: 0 v1 -- ?+0 0x7f1d70471f70 con 0x7f1d80015d00
2016-07-15 14:55:04.414912 7f1d9a5d4700 1 -- 192.168.10.10:0/2444033935 --> 192.168.10.11:6800/2437 -- ping magic: 0 v1 -- ?+0 0x7f1d704722d0 con 0x7f1d80024590
2016-07-15 14:55:04.414917 7f1d9a5d4700 1 -- 192.168.10.10:0/2444033935 --> 192.168.10.10:6800/2428 -- ping magic: 0 v1 -- ?+0 0x7f1d70472630 con 0x7f1d80011ad0
2016-07-15 14:55:04.417668 7f1d982cd700 1 -- 192.168.10.10:0/2444033935 <== osd.2 192.168.10.11:6800/2437 191 ==== osd_op_reply(805 notify.6 [watch ping cookie 139765625589632 gen 1] v0'0 uv1 ondisk = 0) v7 ==== 128+0+0 (738284908 0 0) 0x7f1db8c53000 con 0x7f1d80024590
2016-07-15 14:55:04.418496 7f1d917fa700 1 -- 192.168.10.10:0/2444033935 <== osd.1 192.168.10.10:6804/2723 34 ==== osd_op_reply(804 notify.7 [watch ping cookie 139765625595360 gen 1] v0'0 uv1 ondisk = 0) v7 ==== 128+0+0 (246347383 0 0) 0x7f1db8c51800 con 0x7f1d8001b320
2016-07-15 14:55:04.418756 7f1d916f9700 1 -- 192.168.10.10:0/2444033935 <== osd.0 192.168.10.10:6800/2428 202 ==== osd_op_reply(803 notify.1 [watch ping cookie 139765625580128 gen 1] v0'0 uv1 ondisk = 0) v7 ==== 128+0+0 (552491609 0 0) 0x7f1d70470620 con 0x7f1d80011ad0
2016-07-15 14:55:04.419129 7f1db743f700 1 -- 192.168.10.10:0/2444033935 <== osd.4 192.168.10.12:6800/2352 216 ==== osd_op_reply(806 notify.0 [watch ping cookie 139765625565584 gen 1] v0'0 uv1 ondisk = 0) v7 ==== 128+0+0 (3248623835 0 0) 0x7f1db8c53000 con 0x7f1d80015d00
2016-07-15 14:55:04.420025 7f1db743f700 1 -- 192.168.10.10:0/2444033935 <== osd.4 192.168.10.12:6800/2352 217 ==== osd_op_reply(807 notify.2 [watch ping cookie 139765625593280 gen 1] v0'0 uv1 ondisk = 0) v7 ==== 128+0+0 (953002988 0 0) 0x7f1db8c51800 con 0x7f1d80015d00
2016-07-15 14:55:04.420099 7f1db743f700 1 -- 192.168.10.10:0/2444033935 <== osd.4 192.168.10.12:6800/2352 218 ==== osd_op_reply(809 notify.4 [watch ping cookie 139765625584224 gen 1] v0'0 uv3 ondisk = 0) v7 ==== 128+0+0 (3811823726 0 0) 0x7f1db8c53000 con 0x7f1d80015d00
2016-07-15 14:55:04.420130 7f1db743f700 1 -- 192.168.10.10:0/2444033935 <== osd.4 192.168.10.12:6800/2352 219 ==== osd_op_reply(808 notify.3 [watch ping cookie 139765625581488 gen 1] v0'0 uv1 ondisk = 0) v7 ==== 128+0+0 (234278223 0 0) 0x7f1db8c51800 con 0x7f1d80015d00
2016-07-15 14:55:04.420642 7f1d983ce700 1 -- 192.168.10.10:0/2444033935 <== osd.5 192.168.10.12:6804/2476 52 ==== osd_op_reply(810 notify.5 [watch ping cookie 139765625586960 gen 1] v0'0 uv1 ondisk = 0) v7 ==== 128+0+0 (3678609357 0 0) 0x7f1d7045ea70 con 0x7f1d8001e760

Actions #3

Updated by Loïc Dachary over 7 years ago

  • Target version deleted (v10.2.3)
Actions #4

Updated by Orit Wasserman over 7 years ago

  • Status changed from New to Fix Under Review
Actions #5

Updated by Orit Wasserman over 7 years ago

  • Status changed from Fix Under Review to Resolved
Actions #6

Updated by Zhandong Guo about 7 years ago

Could we patch this fix for jewel? We can't create subuser of s3 type by rest api without this fix

Actions #7

Updated by Nathan Cutler about 7 years ago

  • Status changed from Resolved to Pending Backport
  • Backport set to jewel
Actions #8

Updated by Nathan Cutler about 7 years ago

  • Copied to Backport #19786: jewel: ceph jewel failed create s3 tpye subuser from admin rest api added
Actions #9

Updated by Nathan Cutler almost 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF